# ipir-sp

./: Cargo.toml  README.md
.github/workflows/: inspiring-crate.yml
bench-results/2026-05-10-ipir-ypir/: REPORT.md
inspiring/: Cargo.toml  SPEC.md
inspiring/docs/: inspiring_packing_crate_59430b54.plan.md  spiral-rs-mapping.md
inspiring/src/: automorph.rs  collapse.rs  intermediate.rs  key_switching.rs  lib.rs  pack.rs  preprocess.rs
inspiring/tests/: collapse_correctness.rs  inspiring_vs_cdks_recursion.rs  lemma1_trace.rs  offline_online_equivalence.rs  parameter_validation.rs
inspiring/tools/python-oracle/: README.md
inspiring/tools/python-oracle/inspiring_oracle/: rlwe.py
inspiring/tools/python-oracle/tests/: test_rlwe.py
ipir-sp/: Cargo.toml  README.md
ipir-sp/benches/: client_decode.rs  end_to_end.rs
ipir-sp/src/: bits.rs  client.rs  lib.rs  modulus_switch.rs  serialize.rs  server.rs
ipir-sp/tests/: offline_online_flow.rs
nullifier-pir/src/: backend.rs  http.rs  main.rs
plans/: ypir-sp_on_inspiring_37b742cd.plan.md
simplepir-kernel/: Cargo.toml
simplepir-kernel/src/: avx512.rs  chunked.rs  lib.rs  scalar.rs
ypir-sp/: Cargo.toml
ypir-sp/src/: bits.rs  lib.rs  modulus_switch.rs  params.rs
ypir-sp/tests/: offline_online_flow.rs
