[package]
name = "ipir-sp"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
license = "MIT OR Apache-2.0"
description = "IPIR-SP glue crate using InspiRING.Pack as the ring-packing primitive."

[dependencies]
inspiring = { path = "../inspiring" }
simplepir-kernel = { path = "../simplepir-kernel" }
spiral-rs = { workspace = true }
rand = { version = "0.8.5", features = ["small_rng"] }
rand_chacha = "0.3.1"
log = "0.4.20"
env_logger = "0.11.1"
clap = { version = "4.5.0", features = ["derive"] }
fastrand = "2.0.0"
rayon = "1"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10.6"
actix-cors = { version = "=0.7.0", optional = true }
actix-web = { version = "=4.11.0", optional = true }
reqwest = { version = "0.12", features = ["blocking"], optional = true }

[features]
default = []
http_server = ["dep:actix-cors", "dep:actix-web"]
http_client = ["dep:reqwest"]

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "end_to_end"
harness = false

[[bench]]
name = "client_decode"
harness = false
